--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,15 @@ body {
   background-color: #f5f6fa;
 }
 
+.MuiCardContent-root {
+  background-color: #262626;
+}
+
 .app {
   display: flex;
   justify-content: space-evenly;
-  background-color: #f5f6fa;
+  background-color: #000;
+  color:#6a5d5d;
   padding: 20px;
 }
 
@@ -25,7 +30,6 @@ body {
 }
 
 .app__header > h1 {
-  color: #fc3c3c;
   font-size: 2rem;
 }
 
@@ -36,6 +40,10 @@ body {
 
 .app__left {
   flex: 0.9;
+}
+
+.app__information {
+  background-color: #262626;
 }
 
 .app__information > h3 {
