--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,14 +1,28 @@
 .table {
   margin-top: 20px;
-  overflow: scroll;
+  overflow:auto;
   color: #6a5d5d;
-  background-color: white;
+  background-color: #262626;
   height: 400px;
+  border: #6a5d5d 1px solid;
+}
+
+.table::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+.table::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px #6a5d5d;
+}
+ 
+.table::-webkit-scrollbar-thumb {
+  background-color: #6a5d5d;
 }
 
 .table tr {
   display: flex;
   justify-content: space-between;
+  border-bottom: #6a5d5d 1px dotted;
 }
 
 .table td {
@@ -17,5 +31,5 @@
 }
 
 .table tr:nth-of-type(odd) {
-  background-color: #f3f2f8;
+  background-color: #1a1a1a;
 }
