--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar-thumb {
 .app {
   display: flex;
   justify-content: space-evenly;
-  background-color: #000;
+  background-color: #1a1a1a;
   color: #6a5d5d;
   padding: 20px;
 }
@@ -32,6 +32,7 @@ body::-webkit-scrollbar-thumb {
 .app__dropdown {
   background-color: white;
 }
+
 
 .app__header {
   display: flex;
