--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -2,7 +2,7 @@
   height: 500px;
   background-color: #262626;
   padding: 1rem;
-  border-radius: 20px;
+  border-radius: 4px;
   margin-top: 16px;
   box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
 }
@@ -28,8 +28,9 @@
 }
 
 .info-flag {
-  height: 80px;
+  height: 100px;
   width: 100%;
+  object-fit: contain;
   background-size: cover;
   border-radius: 8px;
 }
