--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: space-evenly;
   background-color: #1a1a1a;
-  /* color: #6a5d5d; */
+  color: #6a5d5d;
   padding: 20px;
 }
 
