--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ body::-webkit-scrollbar-thumb {
   justify-content: center;
   align-items: center;
   height: 3rem;
+  border-top: 3px solid #1a1a1a;
 }
 
 .bottomNav a {
