--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,11 @@ a:hover {
   align-self: flex-start;
 }
 
+.navText > a {
+  display: inline;
+  text-decoration: underline;
+}
+
 .app__dropdown {
   background-color: white;
 }
