--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,12 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px #1a1a1a;
+  background-color: #6a5d5d;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #6a5d5d;
+  background-color: #262626;
+  border-radius: 5px;
 }
 .app {
   display: flex;
@@ -60,6 +62,7 @@ a:hover {
 .app__dropdown {
   background-color: white;
 }
+
 .heading {
   color: #6a5d5d;
   font-size: 2rem;
